--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.1",
     "multer": "^2.0.2"
   },
   "name": "hogwarts-login-portal-main",
